Make StreamsMessageChannel thread-safe