@@ -1,10 +1,11 @@
 package com.github.jacekolszak.messagic.streams.eventbus;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ConcurrentSkipListSet;
 import java.util.function.Consumer;
 
 import com.github.jacekolszak.messagic.BinaryMessage;
@@ -16,27 +17,29 @@ import com.github.jacekolszak.messagic.TextMessage;
 
 final class ListenersSet {
 
-    private Map<EventType, Set<Consumer<? extends Event>>> map = new HashMap<>();
+    private final Map<EventType, Set<Consumer<? extends Event>>> map;
+
+    ListenersSet() {
+        map = new HashMap<>();
+        // preemptively fill map to avoid concurrency issues later
+        for (EventType eventType : EventType.values()) {
+            map.put(eventType, new ConcurrentSkipListSet<>());
+        }
+    }
 
     void add(Class<? extends Event> eventClass, Consumer<? extends Event> listener) {
         EventType eventType = EventType.fromEventClass(eventClass);
-        if (!map.containsKey(eventType)) {
-            map.put(eventType, new LinkedHashSet<>());
-        }
         map.get(eventType).add(listener);
     }
 
     void remove(Class<? extends Event> eventClass, Consumer<? extends Event> listener) {
         EventType eventType = EventType.fromEventClass(eventClass);
-        Set<Consumer<? extends Event>> consumers = map.get(eventType);
-        if (consumers != null) {
-            consumers.remove(listener);
-        }
+        map.get(eventType).remove(listener);
     }
 
     Set<Consumer<Event>> listenersForEvent(Event event) {
         EventType eventType = EventType.fromEventClass(event.getClass());
-        return (Set) map.getOrDefault(eventType, Set.of());
+        return Collections.unmodifiableSet((Set) map.get(eventType));
     }
 
     private enum EventType {
